[package]
name = "firesynth"
version = "0.1.0"
edition = "2021"

[dependencies]
nwg = { version = "1.0.12", package = "native-windows-gui" }
nwd = { version = "1.0.3", package = "native-windows-derive" }
hound = "3.5.1"
rustysynth = "1.3.1"

[profile.release]
strip = true
lto = true
codegen-units = 1
