[package]
name = "firesynth"
version = "2.1.0"
edition = "2021"
description = "GUI Windows-Only SoundFont MIDI renderer"
license = "MIT"
repository = "https://github.com/Metaa4245/firesynth"

[dependencies]
nwg = { version = "1.0.12", package = "native-windows-gui", default-features = false, features = [
    "file-dialog",
] }
nwd = { version = "1.0.3", package = "native-windows-derive" }
hound = "3.5.1"
rustysynth = "1.3.1"
winapi = "0.3.9"

[profile.release]
strip = true
lto = true
codegen-units = 1
